plugins/colorpicker: fix interaction with SDR brightness

Right now both source and target color descriptions have SDR brightness values,
and the target one gets used; in this case however the source brightness needs
to be used instead.

BUG: 484497